created rough website

--- a/index.html
+++ b/index.html
@@ -10,20 +10,172 @@
     <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="foods.css">
 </head>
 
 <body>
     <header>
-        <img class="logo" src="./img/icons/Logo1.png" alt="Logo">
+        <img class="logo" src="./img/icons/Logo 02.png" alt="Logo">
+        <div class="menuicon">
+            <div class="menubar1"></div>
+            <div class="menubar2"></div>
+            <div class="menubar3"></div>
+        </div>
     </header>
+    <section class="top">
+        <div class="topimages">
+            <div class="topbackground"></div>
+            <div class="toplogo"></div>
+        </div>
+
+        <div class="h1andreviews">
+            <h1>MealDrop</h1>
+            <div class="reviews">
+                <img src="./img/icons/star.png" alt="Reviews Icon">
+                <p>4,1 (317)</p>
+            </div>
+        </div>
+        <h2>Juicy, fresh, and ready to drop—your meal, your way.</h2>
+    </section>
 
     <main>
-        <h1>Smoke Grilled Burger</h1>
-        <p>Smoke Grilled Burger</p>
+        <article>
+            <h3>Burgers</h3>
+            <section class="foodsection">
+                <article class="foodarticle">
+                    <div>
+                        <img class="foodimages" src="./img/foodimages/burger.png" alt="Burger Bild">
+                    </div>
+                    <div>
+                        <h4>Smoke Grilled Burger</h4>
+                        <h5>Description Here...</h5>
+                        <div class="priceandaddbutton">
+                            <div>
+                                <p class="startingprice">Starting from</p>
+                                <p class="price" id="price">$15.50</p>
+                            </div>
+                            <div class="plusicon"><img src="./img/icons/add.png" alt="plus icon"></div>
+                        </div>
+                    </div>
+                </article>
+                <article class="foodarticle">
+                    <div>
+                        <img class="foodimages" src="./img/foodimages/burger.png" alt="Burger Bild">
+                    </div>
+                    <div>
+                        <h4>Smoke Grilled Burger</h4>
+                        <div class="priceandaddbutton">
+                            <div>
+                                <p class="startingprice">Starting from</p>
+                                <p class="price" id="price">$15.50</p>
+                            </div>
+                            <div class="plusicon"><img src="./img/icons/add.png" alt="plus icon"></div>
+                        </div>
+                    </div>
+                </article>
+                <article class="foodarticle">
+                    <div>
+                        <img class="foodimages" src="./img/foodimages/burger.png" alt="Burger Bild">
+                    </div>
+                    <div>
+                        <h4>Smoke Grilled Burger</h4>
+                        <div class="priceandaddbutton">
+                            <div>
+                                <p class="startingprice">Starting from</p>
+                                <p class="price" id="price">$15.50</p>
+                            </div>
+                            <div class="plusicon"><img src="./img/icons/add.png" alt="plus icon"></div>
+                        </div>
+                    </div>
+                </article>
+                <article class="foodarticle">
+                    <div>
+                        <img class="foodimages" src="./img/foodimages/burger.png" alt="Burger Bild">
+                    </div>
+                    <div>
+                        <h4>Smoke Grilled Burger</h4>
+                        <div class="priceandaddbutton">
+                            <div>
+                                <p class="startingprice">Starting from</p>
+                                <p class="price" id="price">$15.50</p>
+                            </div>
+                            <div class="plusicon"><img src="./img/icons/add.png" alt="plus icon"></div>
+                        </div>
+                    </div>
+                </article>
+            </section>
+        </article>
+        <h3>Fried Chicken</h3>
+        <section class="foodsection">
+            <article class="foodarticle">
+                <div>
+                    <img class="foodimages" src="./img/foodimages/burger.png" alt="Burger Bild">
+                </div>
+                <div>
+                    <h4>Smoke Grilled Burger</h4>
+                    <div class="priceandaddbutton">
+                        <div>
+                            <p class="startingprice">Starting from</p>
+                            <p class="price" id="price">$15.50</p>
+                        </div>
+                        <div class="plusicon"><img src="./img/icons/add.png" alt="plus icon"></div>
+                    </div>
+                </div>
+            </article>
+            <article class="foodarticle">
+                <div>
+                    <img class="foodimages" src="./img/foodimages/burger.png" alt="Burger Bild">
+                </div>
+                <div>
+                    <h4>Smoke Grilled Burger</h4>
+                    <div class="priceandaddbutton">
+                        <div>
+                            <p class="startingprice">Starting from</p>
+                            <p class="price" id="price">$15.50</p>
+                        </div>
+                        <div class="plusicon"><img src="./img/icons/add.png" alt="plus icon"></div>
+                    </div>
+                </div>
+            </article>
+            <article class="foodarticle">
+                <div>
+                    <img class="foodimages" src="./img/foodimages/burger.png" alt="Burger Bild">
+                </div>
+                <div>
+                    <h4>Smoke Grilled Burger</h4>
+                    <div class="priceandaddbutton">
+                        <div>
+                            <p class="startingprice">Starting from</p>
+                            <p class="price" id="price">$15.50</p>
+                        </div>
+                        <div class="plusicon"><img src="./img/icons/add.png" alt="plus icon"></div>
+                    </div>
+                </div>
+            </article>
+            <article class="foodarticle">
+                <div>
+                    <img class="foodimages" src="./img/foodimages/burger.png" alt="Burger Bild">
+                </div>
+                <div>
+                    <h4>Smoke Grilled Burger</h4>
+                    <div class="priceandaddbutton">
+                        <div>
+                            <p class="startingprice">Starting from</p>
+                            <p class="price" id="price">$15.50</p>
+                        </div>
+                        <div class="plusicon"><img src="./img/icons/add.png" alt="plus icon"></div>
+                    </div>
+                </div>
+            </article>
+        </section>
     </main>
 
     <footer>
-
+        <p>&copy 2026 MealDrop</p>
+        <p class="imprint">Imprint</p>
+        <p class="cookies">Cookie Preferences</p>
     </footer>
 </body>
 <script src="scripts/script.js"></script>
